# xpresion

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  ffscript.cmake.in
sample/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  CompiledExpression.cpp  CompiledExpression.h  DataType.h  ExecutionContext.cpp  ExecutionContext.h  ExpressionContext.cpp  ExpressionContext.h  ExpressionCpp.cpp  ExpressionCpp.h  ExpressionGlobalScope.cpp  ExpressionGlobalScope.h  ExpressionInternal.cpp  ExpressionInternal.h  ImmediateScope.cpp  ImmediateScope.h  ScopedExpresionContext.cpp  ScopedExpresionContext.h  SimpleCompilerSuite.cpp  SimpleCompilerSuite.h  StaticVariable.h  Utility.cpp  Utility.h  VariableManager.cpp  VariableManager.h  VariableUpdater.cpp  VariableUpdater.h  xpression.cpp  xpression.h  xpression.hpp  xpressionapi.h  xutility.cpp  xutility.h
test/: AutoVariableTests.cpp  CMakeLists.txt  CustomScriptTests.cpp  GlobalContextVariableTests.cpp  LocalContextVariableTests.cpp  PrimaryTests.cpp  VariableWithCustomScriptTest.cpp  main.cpp
